// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end-to-end globals/src 1`] = `
"globals
├── global.js
└── src
    ├── index
    │   └── helper.js
    └── index.js"
`;

exports[`end-to-end globals/src: globals/global.js 1`] = `
"export const bob = 5;
"
`;

exports[`end-to-end globals/src: globals/src/index.js 1`] = `
"require(\\"./index/helper\\");
"
`;

exports[`end-to-end globals/src: globals/src/index/helper.js 1`] = `
"require(\\"../../global\\");
export const five = 5;
"
`;

exports[`end-to-end index-cycle 1`] = `
"index-cycle
├── index
│   ├── login
│   │   └── search.js
│   ├── login.js
│   ├── routes
│   │   └── home.js
│   └── routes.js
└── index.js"
`;

exports[`end-to-end index-cycle: index-cycle/index.js 1`] = `
"export { five } from \\"./index/routes\\";
export { seven } from \\"./index/login\\";
"
`;

exports[`end-to-end index-cycle: index-cycle/index/login.js 1`] = `
"import { six } from \\"./login/search\\";

export const seven = six + 1;
"
`;

exports[`end-to-end index-cycle: index-cycle/index/login/search.js 1`] = `
"import { five } from \\"../../index\\";

export const six = five + 1;
"
`;

exports[`end-to-end index-cycle: index-cycle/index/routes.js 1`] = `
"export * from \\"./routes/home\\";
"
`;

exports[`end-to-end index-cycle: index-cycle/index/routes/home.js 1`] = `
"export const five = 5;
"
`;

exports[`end-to-end sharing 1`] = `
"sharing
├── index
│   ├── footer.js
│   ├── header.js
│   └── shared
│       └── helper.js
└── index.js"
`;

exports[`end-to-end sharing: sharing/index.js 1`] = `
"export * from \\"./index/footer\\";
export * from \\"./index/header\\";
"
`;

exports[`end-to-end sharing: sharing/index/footer.js 1`] = `
"import { five } from \\"./shared/helper\\";

export const seven = five + 2;
"
`;

exports[`end-to-end sharing: sharing/index/header.js 1`] = `
"import { five } from \\"./shared/helper\\";
export const six = five + 1;
"
`;

exports[`end-to-end sharing: sharing/index/shared/helper.js 1`] = `
"export const five = 5;
"
`;

exports[`end-to-end simple 1`] = `
"simple
├── index
│   ├── routes
│   │   └── home.js
│   └── routes.js
└── index.js"
`;

exports[`end-to-end simple: simple/index.js 1`] = `
"import { five } from \\"./index/routes\\";
"
`;

exports[`end-to-end simple: simple/index/routes.js 1`] = `
"export * from \\"./routes/home\\";
"
`;

exports[`end-to-end simple: simple/index/routes/home.js 1`] = `
"export const five = 5;
"
`;

exports[`end-to-end spec-files 1`] = `
"spec-files
├── index
│   ├── level1
│   │   ├── level2.js
│   │   └── level2.spec.js
│   ├── level1.js
│   └── level1.spec.js
├── index.js
└── index.spec.js"
`;

exports[`end-to-end spec-files: spec-files/index.js 1`] = `
"require(\\"./index/level1\\");
"
`;

exports[`end-to-end spec-files: spec-files/index.spec.js 1`] = `
"require(\\"./index\\");
"
`;

exports[`end-to-end spec-files: spec-files/index/level1.js 1`] = `
"require(\\"./level1/level2\\");
"
`;

exports[`end-to-end spec-files: spec-files/index/level1.spec.js 1`] = `
"require(\\"./level1\\");
"
`;

exports[`end-to-end spec-files: spec-files/index/level1/level2.js 1`] = `""`;

exports[`end-to-end spec-files: spec-files/index/level1/level2.spec.js 1`] = `
"require(\\"./level2\\");
"
`;
